# cTeXcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/: core.hpp  test.hpp
lib/include/ctexcpp/: bool.h  configuration.h  ctexcpp.h  error.h  hash.h  numberEncoder.h  parser.h  result.h
lib/include/ctexcpp/internals/: errorStack.hpp
lib/src/: configuration.c  ctexcpp.c  ctexcpp.cpp  error.c  hash.c  numberEncoder.c  parser.c  test.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.c  main.cpp
